# classic_benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
classicbench/: utils.py
classicbench/agents/: aisera.py  base.py  cot.py  default.py  reasoning.py  tool_calling.py
classicbench/eval/: metrics.py  prompts.py
classicbench/loaders/: agent.py  data.py
configs/agent/: aisera.yaml  cot_azuregpt4o.yaml  cot_claude35.yaml  cot_gemini.yaml  cot_gpt4.yaml  default.yaml  reasoning_gpto3mini.yaml
configs/eval/: default.yaml  no_security.yaml
figures/: table_accuracy.csv  table_accuracy.tex  table_all.csv  table_all.tex  table_bank.csv  table_bank.tex  table_biotech.csv  table_biotech.tex  table_edtech.csv  table_edtech.tex  table_finance.csv  table_finance.tex  table_hr.csv  table_hr.tex  table_it.csv  table_it.tex  table_medical.csv  table_medical.tex
scripts/figures/: plot_results.py  print_dataset_stats.py
scripts/scripts_to_create_dataset/: 1_convert_raw_to_sampled.py  2_convert_sampled_to_annotations.py  2b_add_workflow_descriptions_to_annotations.py  3_convert_annotations_to_clean.py  4_convert_clean_to_iclr_workshop_sample.py  5_clean_iclr_v0.py  6_hf_dataset.py
